Titulo de la paguina agregado

--- a/Mipagina.html
+++ b/Mipagina.html
@@ -3,6 +3,9 @@
 	<title>Ejemplo de GIT</title>
 </head>
 <body>
-	Pagina en blanco
+	<h1>
+		INSTITUTO TECNOLOGICO DE CULIACAN
+	</h1>
+	
 </body>
 </html>
