--- a/Mipagina.html
+++ b/Mipagina.html
@@ -9,7 +9,8 @@
 	<p>
 		ingenieria en sistemas computacionales
 	</p>
-	<img src="paisaje">
+	<img src="paisaje.JPEG">
+	<img src="h.JPEG">
 	
 </body>
 </html>
